--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lightzone (4.0.0-0core20130807) raring; urgency=low
+
+  * Removed libjpeg-turbo, zlib and lcms2 source
+
+ -- Masahiro Kitagawa <arctica0316@gmail.com>  Wed, 07 Aug 2013 23:58:28 +0900
+
 lightzone (4.0.0-0obs20130807) raring; urgency=low
 
   * Fixed /usr/bin/lightzone for uname -m is i486, i586, i686 or amd64
