--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-lightzone (4.1.0-0.2.beta2-0obs4) unstable; urgency=low
+lightzone (4.1.0~beta2-0obs1) unstable; urgency=low
 
   * Upstream sync
+  * Reverted version numbering
 
  -- Masahiro Kitagawa <arctica0316@gmail.com>  Wed, 23 Oct 2013 00:38:47 +0900
 
